# battleo

./: .gitignore  ARCHITECTURE.md  Cargo.toml  RAYON.md  RAYON_FIX.md  README.md  build.sh  build_main_with_rayon.sh  build_with_rayon.sh  index.html  rayon_demo.html  run_headless.sh  serve_demo.sh  server.js  test_headless.sh  test_rayon.html  verify_web.html
.cargo/: config.toml
src/: agent.rs  ecs.rs  ecs_simulation.rs  genes.rs  headless_simulation.rs  headless_simulation_v2.rs  lib.rs  resource.rs  simulation.rs  simulation_core.rs  test_harness.rs  web_simulation.rs  webgl_renderer.rs  webgl_renderer.rs.backup
