[package]
name = "battleo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# [[bin]]
# name = "headless_runner"
# path = "src/bin/headless_runner.rs"

[features]
default = []
wasm-bindgen-rayon = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
wasm-opt-level = "s"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
wasm-opt-level = "s"

[package.metadata.wasm-pack.profile.release.target.'cfg(target_arch = "wasm32")']
rustflags = ["-C", "target-feature=+atomics,+bulk-memory"]

[package.metadata.wasm-pack.profile.dev.target.'cfg(target_arch = "wasm32")']
rustflags = ["-C", "target-feature=+atomics,+bulk-memory"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "Navigator",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "console",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlTexture",
    "WebGlFramebuffer",
    "WebGlRenderbuffer",
    "WebGlUniformLocation",
    "WebGlActiveInfo",
    "WebGlShaderPrecisionFormat",
    "WebGlContextAttributes",
] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
hecs = "0.10"
rayon = "1.8"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen-rayon = "1.3"
